--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@ video-banner: true
   <!-- end of blog posts reviews -->
   <!-- beginning of editors picks -->
   <section class="grid">
-    <h3 class="col-12"> Editor's Picks </h3>
-    <div class="col-6 picture">
+    <h3 class="col-12 editor"> Editor's Picks </h3>
+    <div class="col-6 picture picks">
       <p> Berlin </p>
       <a href="#"> Read More </a>
     </div>
-    <div class="col-6 picture">
+    <div class="col-6 picture picks">
       <p> Bali </p>
       <a href="#"> Read More </a>
     </div>
