Updated 'index.html' via CloudCannon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ video-banner: true
 ---
   <!-- beginning of blog posts reviews -->
 <section class="column grid padding-none blog-reviews">
+    
+</section>
 
   <!-- row 1 -->
     <div class="col-4_sm-12 cafe bg-image"></div>
