--- a/posts.html
+++ b/posts.html
@@ -24,9 +24,13 @@ pictures:
 <!-- <div class="col-6 car"> </div>
 <div class="col-6 food"> </div> -->
 <!-- row 3 -->
-<a href="#"> previous </a>
-<p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-<a href="#"> next </a>
+<div class="posts-text-section grid">
+  <!-- <a href="#"> previous </a> -->
+  <div class="col-6"></div>
+  <p class="col-6"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+  <!-- <a href="#"> next </a>   -->
+</div>
+
 <!-- comment section -->
 </section>
 <!-- end of blog posts -->
