--- a/about.html
+++ b/about.html
@@ -4,16 +4,15 @@ video-banner: false
 ---
 
 <section>
-  <div class="col-12 blog-title about">
-    <h2> Stephanie L. </h2>
+  <div class="col-12 about">
+    <h2> Stéphie L'or </h2>
     <p> CURATOR AND CREATOR <p>
 
-<p> Stephanie L. is a freelance multi-faceted curator and creator. Blending a passion for design, photography, and travel, Gold fuses these creative leanings with an effortless élan that is democratic yet defies mimicry. The brand offers a singular view of beauty and exploration, with above passions each serving as an entry point to weave the wanderlust, the elegant, and the memorable.
-  <div class="col-2_sm-hidden quotation-marks right light-grey">
-        &#8220;
-        </div>
-There is a gracious kind of subtlety about a woman who has seen the voids and fullness of the world. This calm, collected seeing embodies Asiyami Gold and her eponymous creative agency. "
-Always looking beyond what the eye can see, and reaching more for what the heart can feel, Asiyami Gold considers the emotive and cultural qualities of life through an authentic, relational perspective where the art of image making is imbued with a warm, honest, and deeply personal beauty. L'or au Sphère is equipped with an extensive network, as well as a cornucopia of resources that allow her to create, manage and implement all types of projects. Launched in 2013, L'or au Sphère is a creative agency with a keen eye for design and distinctive aesthetic that has been sought after by GAP, J.CREW,  PANTENE , VOGUE, and more for her photographic nous and creative direction
-</p>
+    <p> Stephanie L. is a freelance multi-faceted curator and creator. Blending a passion for design, photography, and travel, Gold fuses these creative leanings with an effortless élan that is democratic yet defies mimicry. The brand offers a singular view of beauty and exploration, with above passions each serving as an entry point to weave the wanderlust, the elegant, and the memorable.<p>
+
+    <p class="about-quote">"There is a gracious kind of subtlety about a woman who has seen the voids and fullness of the world. This calm, collected seeing embodies Asiyami Gold and her eponymous creative agency. "<p>
+
+    <p>Always looking beyond what the eye can see, and reaching more for what the heart can feel, Asiyami Gold considers the emotive and cultural qualities of life through an authentic, relational perspective where the art of image making is imbued with a warm, honest, and deeply personal beauty. L'or au Sphère is equipped with an extensive network, as well as a cornucopia of resources that allow her to create, manage and implement all types of projects. Launched in 2013, L'or au Sphère is a creative agency with a keen eye for design and distinctive aesthetic that has been sought after by GAP, J.CREW,  PANTENE , VOGUE, and more for her photographic nous and creative direction
+    </p>
   </div>
 </section>
