--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ video-banner: false
 
 <section>
   <div class="col-12 about">
-    <h2> Stéphie L'or </h2>
+    <h2 style="font-size: -webkit-xxx-large"> Stéphie L'or </h2>
     <p> CURATOR AND CREATOR <p>
 
     <p> Stephanie L. is a freelance multi-faceted curator and creator. Blending a passion for design, photography, and travel, Gold fuses these creative leanings with an effortless élan that is democratic yet defies mimicry. The brand offers a singular view of beauty and exploration, with above passions each serving as an entry point to weave the wanderlust, the elegant, and the memorable.<p>
